Add temp API for creating scan objects (#756)
