# quipucords/api/models.py
@@ -16,7 +16,8 @@ from api.fact.model import FactCollection
 from api.fingerprint.model import SystemFingerprint
 from api.credential.model import Credential
 from api.source.model import Source, SourceOptions
-from api.scanjob.model import ScanJob, ScanOptions
+from api.scan.model import Scan, ScanOptions
+from api.scanjob.model import ScanJob, ScanJobOptions
 from api.connresults.model import (JobConnectionResult, TaskConnectionResult,
                                    SystemConnectionResult)
 from api.inspectresults.model import (JobInspectionResult, TaskInspectionResult,
