# quipucords/api/source/view.py
@@ -24,7 +24,7 @@ from rest_framework_expiring_authtoken.authentication import \
 from django_filters.rest_framework import (DjangoFilterBackend, FilterSet)
 from api.filters import ListFilter
 from api.serializers import SourceSerializer
-from api.models import Source, Credential, ScanJob, ScanTask, ScanOptions
+from api.models import Source, Credential, ScanJob, ScanTask, ScanJobOptions
 import api.messages as messages
 from api.common.util import is_int, is_boolean, convert_to_boolean
 from api.signals.scanjob_signal import start_scan
@@ -130,7 +130,7 @@ class SourceViewSet(ModelViewSet):
                     # Grab the source id
                     source_id = response.data['id']
                     # Define the scan options object
-                    scan_options = ScanOptions()
+                    scan_options = ScanJobOptions()
                     scan_options.save()
                     # Create the scan job
                     scan_job = ScanJob(scan_type=ScanTask.SCAN_TYPE_CONNECT,
